# scorpio_ws

./: .gitignore  CONTRIBUTING.md  README.md  build.sh  dependencies.repos  real_record_rosbag_nav.sh  setup.sh  test.sh
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  repos_to_submodules.py
.github/workflows/: build_and_test.yml
scripts/: record_mid360.sh  setup_drivers.sh
src/scorpio_bringup/: CMakeLists.txt  package.xml
src/scorpio_bringup/launch/: bringup_hardware_launch.py  bringup_navigation_launch.py  replay_rosbag_launch.py
src/scorpio_bringup/params/reality/: mid360_user_config.json  scorpio_reality.yaml
src/scorpio_bringup/rviz/: default_view.rviz
